<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Desi-Ret@il</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="next_button">Next</string>
    <string name="title_activity_collect_details_2">collect_details_2</string>
    <string name="title_activity_collect_details_part3">CollectDetailsPart3</string>
    <string name="action_search">Search</string>
    <string name="title_activity_collect_details_part1">CollectDetailsPart1</string>
    <string name="action_home">Home</string>
    <string name="enter_phone_number">Enter your phone number</string>
    <string name="send_button">Send</string>
    <string name="title_main_activity">Register Number</string>
    <string name="title_activity_display_message">Product details</string>
    <string name="next">Next</string>
    <string name="no_phone_number">There is no phone number associated with this mobile</string>
    <string name="welcome_message">Welcome to DesiRetail</string>
    <string name="title_activity_review">Review</string>
    <string name="choose_website">Choose eCommerce site</string>
    <string name="summary_details_text">Summary of details provided</string>
    <string name="go_to_home">Home Page</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="account_name">Account Number</string>
    <string name="enter_bank_details">Enter Bank details</string>
    <string name="title_activity_push_product_to_website">Push product to website</string>
    <string name="ecommerce_site_1">eCommSite1</string>
    <string name="ecommerce_site_2">eCommSite2</string>
</resources>
