<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_message"
        android:id="@+id/textView"
        android:layout_x="75dp"
        android:layout_y="68dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text ="@string/next"
        android:onClick="getRegisteredPhoneNumber"
        android:layout_x="145dp"
        android:layout_y="391dp"
        android:id="@+id/first_page_button" />

    <TextView
        android:layout_width="327dp"
        android:layout_height="74dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/no_phone_number"
        android:id="@+id/textView3"
        android:layout_x="29dp"
        android:layout_y="127dp" />

    <EditText
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:id="@+id/edit_message"
        android:hint="@string/enter_phone_number"
        android:layout_x="79dp"
        android:layout_y="266dp" />


</AbsoluteLayout>
